Внедрить детали задания преподавателя
