# src/api/sqlmodule/model/index.ts
@@ -63,6 +63,7 @@ export * from './parameterDefinitionResponsePageResponse';
 export * from './physicalTypeResponse';
 export * from './physicalTypeResponsePageResponse';
 export * from './problemDetails';
+export * from './publicationStatus';
 export * from './relationshipDraft';
 export * from './schemaColumnMap';
 export * from './schemaTableMap';
@@ -75,6 +76,11 @@ export * from './submitAttemptResponse';
 export * from './tableDraft';
 export * from './targetDbResponse';
 export * from './targetDbResponsePageResponse';
+export * from './teacherTaskAttemptResponse';
+export * from './teacherTaskDetailsResponse';
+export * from './teacherTaskSqlQueryResponse';
+export * from './teacherTaskTableResponse';
+export * from './teacherTaskTargetDbResponse';
 export * from './topicResponse';
 export * from './topicResponsePageResponse';
 export * from './updateAttributeParameterValueRequest';
